# ci_tests

./: .travis.yml  CMakeLists.txt  README.md
ci/: build_install_lib.sh  build_test_consumer.sh  install_deps.sh  test_lib.sh
cmake/: ci_testConfig.cmake.in
example/: CMakeLists.txt  example.cpp
example/tests/: coders.bats
src/: prelude.cpp  prelude.h
tests/: CMakeLists.txt  test.cpp
